[package]
name = "lal"
version = "3.10.0"
authors = ["Eirik Albrigtsen <sszynrae@gmail.com>", "Ben Cordero <bencord0@condi.me>"]
description = "A strict, language-agnostic build system and dependency manager"
documentation = "http://lalbuild.github.io/lal"
license = "MIT"
categories = ["command-line-utilities"]
keywords = ["package", "dependency", "build", "docker", "artifactory"]
readme = "README.md"
edition = "2018"

[badges]
github = { repository = "lalbuild/lal", branch = "master" }
coveralls = { repository = "lalbuild/lal", branch = "master" }

[[bin]]
doc = false
name = "lal"
path = "src/main.rs"

[dependencies]
ansi_term = "0.12.1"
chrono = "0.4"
clap = "2"
filetime = "0.1"
flate2 = "1.0.20"
hyper = "0.10"
lazy_static = "1.4.0"
log = "0.4.14"
loggerv = "0.7.2"
openssl-probe = "0.1.4"
rand = "0.3.14"
regex = "0.1.55"
sha1 = "0.3.0"
semver = "1.0.3"
serde = { version = "1.0.110", features = ["derive"] }
serde_json = "1.0.64"
tar = "0.4.35"
walkdir = "1.0.7"
dirs = "2.0.2"
tempfile = "3"

[dependencies.indicatif]
optional = true
version = "0.3.3"

[features]
default = ["docker", "progress"]
docker = []
progress = ["indicatif"]
upgrade = []

[lib]
name = "lal"
path = "src/lib.rs"

[dev-dependencies]
fs_extra = "1.1.0"
parameterized-macro = "0.3.1"
